fixed spacing on home, skills and contact sections

--- a/style.css
+++ b/style.css
@@ -135,21 +135,11 @@ p {
     
 }
 
-/* navigation */
-/* .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    text-decoration: none;
-    margin: 0 auto;
-    padding: 20px;
-    gap: 20px;
-    list-style-type: none;
-} */
 .nav-menu {
-    display: none;
-    /* align-items: center; */
+    position: absolute;
+    top: -1000px;
 }
+
 .hamburger-menu {
     align-items: center;
 }
@@ -168,6 +158,7 @@ p {
     border-bottom: var(--border-width-link) solid var(--font-color);
     text-decoration: none;
 }
+
 
 
 button {
@@ -263,6 +254,12 @@ section {
 }
 
 /* home section */
+
+.home-content {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 #home {
     width: 100%;
     padding: 2rem;
@@ -308,8 +305,9 @@ span {
     list-style-type: none;
     font-size: var(--font-sm);
     display: flex;
-    flex-direction: row;
-    justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .skills-title p {
@@ -377,7 +375,6 @@ span {
     flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
-    width: 50%;
 }
 
 .footer.text {
